fixed css for editing message on mobile

--- a/src/app/main-page/message/message.component.scss
+++ b/src/app/main-page/message/message.component.scss
@@ -2,11 +2,9 @@
 
 .message-container {
     @include flex($direction: row, $align: start, $justify: start);
-    gap: 24px;
-    padding: 16px 32px;
-    // background-color: $white;
+    gap: 16px;
+    padding: 16px 24px;
     position: relative;
-    // transition: background-color 1s ease;
 
 
     .avatar {
