--- a/src/app/shared/avatar/avatar.component.scss
+++ b/src/app/shared/avatar/avatar.component.scss
@@ -2,8 +2,8 @@
 
 .avatar {
     @include rounded($all: 50%);
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
 
     @media (max-width: $breakpoint-xl) {
         width: 40px;
